# DecisionTreeClassifierTitanic

./: .dockerignore  .gitignore  Dockerfile  README.md  final_model.joblib  main.py  pyproject.toml  train.ipynb
