[tool.poetry]
name = "decisiontreeclassifier"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
loguru = "^0.7.3"
pandas = "^2.2.3"
joblib = "^1.5.0"
pydantic = "^2.11.4"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
